[gd_scene load_steps=13 format=2]

[ext_resource path="res://Menu/ReadyScreen.gd" type="Script" id=1]
[ext_resource path="res://Menu/hud_theme.tres" type="Theme" id=2]
[ext_resource path="res://Menu/IdleMario.png" type="Texture" id=3]
[ext_resource path="res://Shader/luigi.shader" type="Shader" id=4]
[ext_resource path="res://Shader/player3.shader" type="Shader" id=5]
[ext_resource path="res://Shader/player4.shader" type="Shader" id=6]
[ext_resource path="res://Menu/LoadingIcon.tscn" type="PackedScene" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/newHatColor = Plane( 1, 1, 1, 1 )
shader_param/newShirtColor = Plane( 0, 0.5803, 0, 1 )
shader_param/newFlowerHatColor = Plane( 0.501961, 0.937255, 0.14902, 1 )
shader_param/newFlowerShirtColor = Plane( 0.968628, 0.207843, 0.0745098, 1 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 5 )
shader_param/newHatColor = Plane( 1, 1, 1, 1 )
shader_param/newShirtColor = Plane( 0.196078, 0.486275, 0.819608, 1 )
shader_param/newFlowerHatColor = Plane( 1, 0.788235, 0.788235, 1 )
shader_param/newFlowerShirtColor = Plane( 0.576471, 0.176471, 1, 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 6 )
shader_param/newHatColor = Plane( 1, 0.862745, 0.45098, 1 )
shader_param/newShirtColor = Plane( 0.65098, 0.486275, 0, 1 )
shader_param/newFlowerHatColor = Plane( 1, 1, 1, 1 )
shader_param/newFlowerShirtColor = Plane( 1, 0.380392, 0, 1 )

[sub_resource type="Animation" id=4]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("BG2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("BG2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Screen" type="Node"]
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WholeScreen" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpperScreen" type="HBoxContainer" parent="WholeScreen"]
margin_right = 256.0
margin_bottom = 127.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 1

[node name="P1" type="VBoxContainer" parent="WholeScreen/UpperScreen"]
margin_right = 127.0
margin_bottom = 127.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="WholeScreen/UpperScreen/P1"]
margin_top = 49.0
margin_right = 127.0
margin_bottom = 57.0
text = "Ready!"
align = 1

[node name="PlayerBox" type="HBoxContainer" parent="WholeScreen/UpperScreen/P1"]
margin_top = 61.0
margin_right = 127.0
margin_bottom = 77.0
alignment = 1

[node name="READY" type="TextureRect" parent="WholeScreen/UpperScreen/P1/PlayerBox"]
margin_left = 55.0
margin_right = 71.0
margin_bottom = 16.0
texture = ExtResource( 3 )

[node name="P2" type="VBoxContainer" parent="WholeScreen/UpperScreen"]
margin_left = 128.0
margin_right = 256.0
margin_bottom = 127.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="WholeScreen/UpperScreen/P2"]
margin_top = 49.0
margin_right = 128.0
margin_bottom = 57.0
text = "Ready!"
align = 1

[node name="PlayerBox2" type="HBoxContainer" parent="WholeScreen/UpperScreen/P2"]
margin_top = 61.0
margin_right = 128.0
margin_bottom = 77.0
alignment = 1

[node name="READY" type="TextureRect" parent="WholeScreen/UpperScreen/P2/PlayerBox2"]
material = SubResource( 1 )
margin_left = 56.0
margin_right = 72.0
margin_bottom = 16.0
texture = ExtResource( 3 )

[node name="LowerScreen" type="HBoxContainer" parent="WholeScreen"]
margin_top = 129.0
margin_right = 256.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 1

[node name="P3" type="VBoxContainer" parent="WholeScreen/LowerScreen"]
margin_right = 127.0
margin_bottom = 127.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="WholeScreen/LowerScreen/P3"]
margin_top = 49.0
margin_right = 127.0
margin_bottom = 57.0
text = "Ready!"
align = 1

[node name="PlayerBox3" type="HBoxContainer" parent="WholeScreen/LowerScreen/P3"]
margin_top = 61.0
margin_right = 127.0
margin_bottom = 77.0
alignment = 1

[node name="READY" type="TextureRect" parent="WholeScreen/LowerScreen/P3/PlayerBox3"]
material = SubResource( 2 )
margin_left = 55.0
margin_right = 71.0
margin_bottom = 16.0
texture = ExtResource( 3 )

[node name="P4" type="VBoxContainer" parent="WholeScreen/LowerScreen"]
margin_left = 128.0
margin_right = 256.0
margin_bottom = 127.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="WholeScreen/LowerScreen/P4"]
margin_top = 49.0
margin_right = 128.0
margin_bottom = 57.0
text = "Ready!"
align = 1

[node name="PlayerBox4" type="HBoxContainer" parent="WholeScreen/LowerScreen/P4"]
margin_top = 61.0
margin_right = 128.0
margin_bottom = 77.0
alignment = 1

[node name="READY" type="TextureRect" parent="WholeScreen/LowerScreen/P4/PlayerBox4"]
material = SubResource( 3 )
margin_left = 56.0
margin_right = 72.0
margin_bottom = 16.0
texture = ExtResource( 3 )

[node name="Fade" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BG2" type="ColorRect" parent="Fade"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="FadeAnimationPlayer" type="AnimationPlayer" parent="Fade"]
anims/FadeIn = SubResource( 4 )
anims/FadeOut = SubResource( 5 )

[node name="TimeTillFadeOut" type="Timer" parent="."]
wait_time = 2.0

[node name="LoadingIcon" parent="." instance=ExtResource( 7 )]
anchor_left = 1.0
anchor_top = 1.0
margin_left = -256.0
margin_top = -13.0
margin_right = 0.0
margin_bottom = 0.0
[connection signal="timeout" from="TimeTillFadeOut" to="." method="_on_TimeTillFadeOut_timeout"]
